# Mencer-Submission

./: .gitignore  Anchor.toml  ReadMe.md
app/: crowdfund.ts
programs/mencer/: Cargo.toml
programs/mencer/src/: lib.rs
tests/: mencer.ts
